--- a/portfolio/portfolio-final/bio.html
+++ b/portfolio/portfolio-final/bio.html
@@ -33,6 +33,13 @@
 		
 		<h2>Biography</h2>
 
+			<div class="bio-img"><img class="bio-img" src="biopic.jpg"/></div>
+
+			<div class="bio-content">
+				<h3>Hello,</h3>
+					<p>text goes here</p>
+			</div>
+
 
 	</div>
 
