--- a/portfolio/portfolio-final/bio.html
+++ b/portfolio/portfolio-final/bio.html
@@ -43,7 +43,13 @@
 			
 			<h3>Hello,</h3>
 					
-				<p>text goes here</p>
+				<p>Thank you for taking the time to visit my portfolio. The content on this website reflects much of my work experience, education, and interests. However on a personal note, this Bio page may explain some of my motivation and inspiration.</p>
+
+				<p>As a History major, I have studied many diverse histories. Most importantly, I have been trained to study particular material, discern a significant question, gather and analyze sources to ground historical analysis, and to express my analysis in a way that is clear and simple.</p>
+
+				<p>As a Geographic Information Systems minor, I have studied how to analyze geographic data and to use the mapping interface of the software to analyze visual trends and dimensions of the data. Cartography has been a central element of this degree, as map making is part of the analyzing process, and is often part of the final presentation (such as an essay document).<p>
+
+				<p>My true focus has been Historical GIS. I have researched this emerging field quite deeply, eventually deciding to write my Honors Thesis on it. On the other hand, my true passion is being able to help my community. I believe me educational background and work experience have prepared me to offer my skills as a GIS Analyst, Researcher/Analyst, and Cartographer in the hopes of improving our understanding and relationship with the world around us.<p>
 		</div>
 
 
