--- a/portfolio/portfolio-final/bio.html
+++ b/portfolio/portfolio-final/bio.html
@@ -49,7 +49,15 @@
 
 				<p>As a Geographic Information Systems minor, I have studied how to analyze geographic data and to use the mapping interface of the software to analyze visual trends and dimensions of the data. Cartography has been a central element of this degree, as map making is part of the analyzing process, and is often part of the final presentation (such as an essay document).<p>
 
-				<p>My true focus has been Historical GIS. I have researched this emerging field quite deeply, eventually deciding to write my Honors Thesis on it. On the other hand, my true passion is being able to help my community. I believe me educational background and work experience have prepared me to offer my skills as a GIS Analyst, Researcher/Analyst, and Cartographer in the hopes of improving our understanding and relationship with the world around us.<p>
+				<p>My true focus has been Historical GIS. I have researched this emerging field quite deeply, eventually deciding to write my Honors Thesis on it. On the other hand, my true passion is being able to help my community. I believe my educational background and work experience have prepared me to offer my skills as a GIS Analyst, Researcher/Analyst, and Cartographer in the hopes of improving our understanding and relationship with the world around us.<p>
+
+				<p>For further description of GIS and how it is currently being applied, these links below were produced by Pennsylvania State University to describe how GIS is utilized to transform and inform the way we interact with the world around us:</p>
+
+				<p><span><a href="https://www.youtube.com/watch?v=GXS0bsR0e7w&index=1&list=PLKezsLnzDdexE0l58ZZzhc4Ev1xA0Tu4K">This video</a></span> discusses how GIS has transformed the way "local governments and business use geospatial technology to deliver services and run efficiently, keeping a continuing eye on future developments and applications.</p>
+
+				<p><span><a href="https://www.youtube.com/watch?v=OePOK6nzcaY&list=PLKezsLnzDdexE0l58ZZzhc4Ev1xA0Tu4K&index=2">This video</a></span> discusses how GIS informs "the world of security: how new technologies help to broker peace, wage war, and fight crime but can also compromise personal privacy"</p>
+
+				<p><span><a href="https://www.youtube.com/watch?v=9F7z9LLYxf8&list=PLKezsLnzDdexE0l58ZZzhc4Ev1xA0Tu4K&index=3">This video</a></span> discusses how GIS is utilized "around the world: monitoring global climate change, preventing famine, tracking disease and mapping communities never before seen on a map"</p>
 		</div>
 
 
