--- a/portfolio/portfolio-final/bio.html
+++ b/portfolio/portfolio-final/bio.html
@@ -53,7 +53,7 @@
 
 				<p>For further description of GIS and how it is currently being applied, these links below were produced by Pennsylvania State University to describe how GIS is utilized to transform and inform the way we interact with the world around us:</p>
 
-				<p class="bio-link"><span><a href="https://www.youtube.com/watch?v=GXS0bsR0e7w&index=1&list=PLKezsLnzDdexE0l58ZZzhc4Ev1xA0Tu4K" target="_blank">This video</a></span> discusses how GIS has transformed the way "local governments and business use geospatial technology to deliver services and run efficiently, keeping a continuing eye on future developments and applications.</p>
+				<p class="bio-link"><span><a href="https://www.youtube.com/watch?v=GXS0bsR0e7w&index=1&list=PLKezsLnzDdexE0l58ZZzhc4Ev1xA0Tu4K" target="_blank">This video</a></span> discusses how GIS has transformed the way "local governments and business use geospatial technology to deliver services and run efficiently, keeping a continuing eye on future developments and applications"</p>
 
 				<p class="bio-link"><span><a href="https://www.youtube.com/watch?v=OePOK6nzcaY&list=PLKezsLnzDdexE0l58ZZzhc4Ev1xA0Tu4K&index=2" target="_blank">This video</a></span> discusses how GIS informs "the world of security: how new technologies help to broker peace, wage war, and fight crime but can also compromise personal privacy"</p>
 
