--- a/portfolio/portfolio-final/bio.html
+++ b/portfolio/portfolio-final/bio.html
@@ -53,16 +53,19 @@
 
 				<p>For further description of GIS and how it is currently being applied, these links below were produced by Pennsylvania State University to describe how GIS is utilized to transform and inform the way we interact with the world around us:</p>
 
-				<p class="bio-link"><span><a href="https://www.youtube.com/watch?v=GXS0bsR0e7w&index=1&list=PLKezsLnzDdexE0l58ZZzhc4Ev1xA0Tu4K" target="_blank">This video</a></span> discusses how GIS has transformed the way "local governments and business use geospatial technology to deliver services and run efficiently, keeping a continuing eye on future developments and applications"</p>
+				<p class="bio-link"><span class="bio-span"><a href="https://www.youtube.com/watch?v=GXS0bsR0e7w&index=1&list=PLKezsLnzDdexE0l58ZZzhc4Ev1xA0Tu4K" target="_blank">This video</a></span> discusses how GIS has transformed the way "local governments and business use geospatial technology to deliver services and run efficiently, keeping a continuing eye on future developments and applications"</p>
 
-				<p class="bio-link"><span><a href="https://www.youtube.com/watch?v=OePOK6nzcaY&list=PLKezsLnzDdexE0l58ZZzhc4Ev1xA0Tu4K&index=2" target="_blank">This video</a></span> discusses how GIS informs "the world of security: how new technologies help to broker peace, wage war, and fight crime but can also compromise personal privacy"</p>
+				<p class="bio-link"><span class="bio-span"><a href="https://www.youtube.com/watch?v=OePOK6nzcaY&list=PLKezsLnzDdexE0l58ZZzhc4Ev1xA0Tu4K&index=2" target="_blank">This video</a></span> discusses how GIS informs "the world of security: how new technologies help to broker peace, wage war, and fight crime but can also compromise personal privacy"</p>
 
-				<p class="bio-link"><span><a href="https://www.youtube.com/watch?v=9F7z9LLYxf8&list=PLKezsLnzDdexE0l58ZZzhc4Ev1xA0Tu4K&index=3" target="_blank">This video</a></span> discusses how GIS is utilized "around the world: monitoring global climate change, preventing famine, tracking disease and mapping communities never before seen on a map"</p>
+				<p class="bio-link"><span class="bio-span"><a href="https://www.youtube.com/watch?v=9F7z9LLYxf8&list=PLKezsLnzDdexE0l58ZZzhc4Ev1xA0Tu4K&index=3" target="_blank">This video</a></span> discusses how GIS is utilized "around the world: monitoring global climate change, preventing famine, tracking disease and mapping communities never before seen on a map"</p>
 		</div>
 
 	</div>
 
-	<footer>Last edited by Zachary C. Raslan : March 9, 2016</footer>
+	<a href="#">
+		<footer>Last edited by Zachary C. Raslan : March 14, 2016
+		</footer>
+	</a>
 
 </body>
 </html>
