changes made to the bio page

--- a/portfolio/portfolio-final/bio.html
+++ b/portfolio/portfolio-final/bio.html
@@ -55,13 +55,15 @@
 			
 			<h3>Hello,</h3>
 					
-				<p>Thank you for taking the time to visit my portfolio. The content on this website reflects much of my work experience, education, and interests. However on a personal note, this Bio page may explain some of my motivation and inspiration.</p>
+				<p>Thank you for taking the time to visit my portfolio.</p>
+
+				<p>In 2015 I graduated from the University of Connecticut earning a B.A. in History and GIS. While attending UConn I mainly studied applications of Historical GIS, Digital Humanities, GIS, and innovative Geospatial Data Analytics. I am currently enrolled in a Geospatial Intelligence Analytics Graduate Certificate Program at Pennsylvania State University. I have worked for Enterprise GIS offices such as the Connecticut State Data Center and UConn Libraries’ Map and Geographic Information Center, the Connecticut State Museum of Natural History, and as a GIS Analyst/LiDAR Specialist for the UConn Geomorphology and Earth Processes Research Team. I was awarded the UConn IDEA Grant to fund my self-developed research for my Honors Thesis – case study material based on Allison Horrocks’ Virtual Hartford episode on the development of Parks and Recreation in early 20th century Hartford, CT. I also have a knowledge of HTML/CSS code languages and designed this online portfolio using source code as an exhibition of my academic and professional experience.</p>
 
 				<p>As a student of the humanities I have studied many diverse histories. Most importantly, I have been trained to study particular material, discern a significant question, gather and analyze sources to ground historical analysis, and to express my analysis in a way that is clear and simple.</p>
 
-				<p>As a Geographic Information Systems minor I have studied geographic data analysis and the mapping interface of GIS software to analyze visual trends and dimensions of the data. Cartography has been a central element of this degree, as map making is part of the analyzing process, and is often part of the final presentation (such as an essay document).</p>
+				<p>As a Geographic Information Systems minor I have studied geographic data analysis and the mapping interface of GIS software to analyze visual trends and dimensions of geospatial data. Cartography has been a central element of this degree, as map making is part of the analyzing process and is often part of the final presentation (such as static or interactive documents).</p>
 
-				<p>My true focus has been Historical GIS. I have researched this emerging field quite deeply, eventually deciding to write my Honors Thesis on it. On the other hand, my true passion is being able to help my community. I believe my educational background and work experience have prepared me to offer my skills as a GIS Analyst, Researcher/Analyst, and Cartographer in the hopes of improving our understanding and relationship with the world around us.</p>
+				<p>My true focus has been Historical GIS; I have researched this emerging field deeply, eventually deciding to write my Honors Thesis on it. On the other hand, my true passion is being able to help my community and environmental protection. I believe my educational background and work experience have prepared me to offer my skills as a GIS Analyst, Researcher/Analyst, and Cartographer in the hopes of improving our understanding and relationship with the world around us.</p>
 
 				<p>For further description of GIS and how it is currently being applied, these links below were produced by Pennsylvania State University to describe how GIS is utilized to transform and inform the way we interact with the world around us:</p>
 
