text change bio

--- a/portfolio/portfolio-final/bio.html
+++ b/portfolio/portfolio-final/bio.html
@@ -63,7 +63,7 @@
 
 				<p>As a Geographic Information Systems minor I have studied geographic data analysis and the mapping interface of GIS software to analyze visual trends and dimensions of geospatial data. Cartography has been a central element of this degree, as map making is part of the analyzing process and is often part of the final presentation (such as static or interactive documents).</p>
 
-				<p>My true focus has been Historical GIS; I have researched this emerging field deeply, eventually deciding to write my Honors Thesis on it. On the other hand, my true passion is being able to help my community and environment. I believe my education and work experience have prepared me to offer my skills as a GIS Analyst, Researcher/Analyst, and Cartographer in hopes of improving our understanding and relationship with the world around us.</p>
+				<p>My true focus has been Historical GIS; I have researched this emerging field deeply, eventually deciding to base my Honors Thesis on it. On the other hand, my true passion is being able to help my community and environment. I believe my education and work experience have prepared me to offer my skills as a GIS Analyst, Researcher/Analyst, and Cartographer in hopes of improving our understanding and relationship with the world around us.</p>
 
 				<p>For further description of GIS and how it is currently being applied, these links below were produced by Pennsylvania State University to describe how GIS is utilized to transform and inform the way we interact with the world around us:</p>
 
