--- a/portfolio/portfolio-final/bio.html
+++ b/portfolio/portfolio-final/bio.html
@@ -57,7 +57,13 @@
 					
 				<p>Thank you for taking the time to visit my portfolio.</p>
 
-				<p>My most recent work has been with an Environmental Protection organization in northwestern Connecticut, the Housatonic Valley Association (HVA). As GIS Manager, I worked closely with clients on projects regarding geospatial analysis and map design. I also designed the departments internal  geographic information systems and maintain online GIS platforms and Web Mapping Services.</p>
+				<p>I am a Geospatial Analyst with a specialization in applied interdisciplinary GIS. I have been involved in research projects ranging from simple data editing to complex modeling for advanced spatial analytics. I have worked with the Connecticut State Data Center, University of Connecticut Libraries’ Map and Geographic Information Center, Connecticut Museum of Natural History, University of Connecticut’s Geomorphology and Earth Processes Research Team, and University of Connecticut’s Virtual Hartford Research Team while completing my BA at the University of Connecticut in Storrs, CT.</p>
+
+				<p>In addition, I also own and operate my own small business. Cliographica is a mapping based research and development firm committed to supporting our community with innovative and interdisciplinary geographic information system solutions. We draw upon a mixture of GIS analytics, application development, and interdisciplinary research to address the needs of each client, relying on a combination of technical expertise and artistic creativity to inspire our methodology.</p>
+
+				<p>“The ultimate objective of all Geospatial Intelligence is to produce knowledge upon which a decision maker can act.”</p>
+
+				<!--<p>My most recent work has been with an Environmental Protection organization in northwestern Connecticut, the Housatonic Valley Association (HVA). As GIS Manager, I worked closely with clients on projects regarding geospatial analysis and map design. I also designed the departments internal  geographic information systems and maintain online GIS platforms and Web Mapping Services.</p>
 
 				<p>In 2015 I graduated from the University of Connecticut earning a B.A. in History and GIS. While attending UConn I mainly studied applications of GIS in relation to historiography, digital humanities, and innovative Geospatial Data Analytics. My academic interests focus on geospatial and location intelligence, historical and computational research methods, and demographic modeling. I have worked as a Census and Geospatial Data Assistant for the Connecticut State Data Center and UConn Libraries Map and Geographic Information Center, enterprise GIS offices which provide geospatial services for university departments and state agencies. I am also committed to the study and wellbeing of our environment, especially with regard to our human history of interaction with it. During my employment with the Connecticut State Museum of Natural History I was able to help facilitate the enrollment of programs at the museum as a student administrator, and work side by side with the State Archeologist, Brian Jones, to design and create an online GIS platform capable of housing and interactively displaying State Archeologist data. While an undergraduate student, I was an active researcher in several departments at the University. Working as a GIS Analyst/LiDAR Specialist for the UConn Geomorphology and Earth Processes Research Team, I was able to implement cutting edge remote sensed data and geospatial technology to research historical human interaction with the northwestern Connecticut landscape. Virtual Hartford is a University research team which is committed the study of Hartford, CT via microhistories. As a Digital Humanities Researcher/GIS Specialist for Virtual Hartford I digitized, georeferenced, and organized historical geospatial data into a GIS for historical research purposes. I was awarded the UConn IDEA Grant to fund my Honors Thesis research – case study material based on VH member, <span><a href="http://omeka1.lib.uconn.edu/exhibits/show/public-playgrounds" target="_blank">Allison Horrocks</a></aspan>’, Virtual Hartford episode regarding the development of Parks and Recreation in early 20th century Hartford, CT. I am also proficient with HTML and CSS mark up languages and designed this online portfolio myself as an exhibit of my academic and professional experience. Along with this website, I store GIS data for download on GitHub - (Coming Soon).</p>
 
@@ -65,7 +71,7 @@
 
 				<p>As a Geographic Information Systems minor I have studied geographic data analysis and the mapping interface of GIS software to analyze visual trends and dimensions of geospatial data. Cartography has been a central element of this degree, as map making is part of the analyzing process and is often part of the final presentation (such as static or interactive documents).</p>
 
-				<p>My true focus has been Historical GIS; I have researched this emerging field deeply, eventually deciding to base my Honors Thesis on it. On the other hand, my true passion is being able to help my community and environment. I believe my education and work experience have prepared me to offer my skills as a GIS Analyst, Researcher/Analyst, and Cartographer in hopes of improving our understanding and relationship with the world around us.</p>
+				<p>My true focus has been Historical GIS; I have researched this emerging field deeply, eventually deciding to base my Honors Thesis on it. On the other hand, my true passion is being able to help my community and environment. I believe my education and work experience have prepared me to offer my skills as a GIS Analyst, Researcher/Analyst, and Cartographer in hopes of improving our understanding and relationship with the world around us.</p>-->
 
 				<p>For further description of GIS and how it is currently being applied, these links below were produced by Pennsylvania State University to describe how GIS is utilized to transform and inform the way we interact with the world around us:</p>
 
@@ -79,7 +85,7 @@
 	</div>
 
 	<a href="#">
-		<footer>Last edited by Zachary C. Raslan : March 13, 2017
+		<footer>Last edited by Zachary C. Raslan : November 13, 2017
 		</footer>
 	</a>
 
