--- a/portfolio/portfolio-final/bio.html
+++ b/portfolio/portfolio-final/bio.html
@@ -57,7 +57,7 @@
 					
 				<p>Thank you for taking the time to visit my portfolio.</p>
 
-				<p>I am a Geospatial Analyst with a specialization in applied interdisciplinary GIS. I have been involved in research projects ranging from simple data editing to complex modeling for advanced spatial analytics. I have worked with the Connecticut State Data Center, University of Connecticut Libraries’ Map and Geographic Information Center, Connecticut Museum of Natural History, University of Connecticut’s Geomorphology and Earth Processes Research Team, and University of Connecticut’s Virtual Hartford Research Team while completing my BA at the University of Connecticut in Storrs, CT.</p>
+				<p>I am a GIS Analyst with a specialization in applied interdisciplinary GIS. This online portfolio is a place I have created to showcase my professional GIS projects ranging from LLD Telecommunication Drafting to complex modeling for advanced spatial analytics. I have a diverse professional background in GIS working with the Connecticut State Data Center/Map and Geographic Information Center, University of Connecticut’s Geomorphology and Earth Processes Research Team, Wesleyan University’s Critical Health and Social Ecology Lab, and KLJ Engineering’s Telecommunication Division.</p>
 
 				<p>In addition, I also own and operate my own small business. Cliographica is a mapping based research and development firm committed to supporting our community with innovative and interdisciplinary geographic information system solutions. We draw upon a mixture of GIS analytics, application development, and interdisciplinary research to address the needs of each client, relying on a combination of technical expertise and artistic creativity to inspire our methodology.</p>
 
@@ -85,7 +85,7 @@
 	</div>
 
 	<a href="#">
-		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : May 5th, 2018
+		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : April 9th, 2019
 		</footer>
 	</a>
 
