new section for AGOL

--- a/portfolio/portfolio-final/bio.html
+++ b/portfolio/portfolio-final/bio.html
@@ -57,11 +57,11 @@
 					
 				<p>Thank you for taking the time to visit my portfolio.</p>
 
-				<p>I am a Geospatial Analyst with a specialization in interdisciplinary research and applied GIS. This online portfolio is a place I have created to showcase examples of GIS projects I am or have been a part of, ranging from LLD Telecommunication Drafting to complex modeling for advanced spatial analytics. I have a diverse professional background in GIS working with the Connecticut State Data Center/Map and Geographic Information Center, University of Connecticut’s Geomorphology and Earth Processes Research Team, Wesleyan University’s Critical Health and Social Ecology Lab, and KLJ Engineering’s Telecommunication Division.</p>
+				<p>I am a Geospatial Analyst with a specialization in interdisciplinary research and applied GIS. I created this portfolio to showcase examples of GIS projects I am or have been a part of, ranging from LLD Telecommunication Drafting to complex modeling for advanced spatial analysis. I have a diverse professional background in GIS which includes working with the Connecticut State Data Center/Map and Geographic Information Center, University of Connecticut’s Geomorphology and Earth Processes Research Team, Wesleyan University’s Critical Health and Social Ecology Lab, KLJ Engineering’s Telecommunication Division, and Massachusetts Development Finance Agency.</p>
 
-				<p>In addition, I also own and operate my own small business. Cliographica is a mapping based research and development firm committed to supporting our community with innovative and interdisciplinary geographic information system solutions. We draw upon a mixture of GIS analytics, application development, and interdisciplinary research to address the needs of each client, relying on a combination of technical expertise and artistic creativity.</p>
+				<p>In addition, I founded a small Geospatial Consulting business in 2015 (ClioGraphica) and have been offering GIS, History, and Digital Humanities tutoring services since 2013. <!--Cliographica is a mapping based research and development firm committed to supporting our community with innovative and interdisciplinary geographic information system solutions. We draw upon a mixture of GIS analytics, application development, and interdisciplinary research to address the needs of each client, relying on a combination of technical expertise and artistic creativity.--></p>
 
-				<p>“The ultimate objective of all Geospatial Intelligence is to produce knowledge upon which a decision maker can act.”</p>
+				<!--<p>“The ultimate objective of all Geospatial Intelligence is to produce knowledge upon which a decision maker can act.”</p>-->
 
 				<!--<p>My most recent work has been with an Environmental Protection organization in northwestern Connecticut, the Housatonic Valley Association (HVA). As GIS Manager, I worked closely with clients on projects regarding geospatial analysis and map design. I also designed the departments internal  geographic information systems and maintain online GIS platforms and Web Mapping Services.</p>
 
@@ -73,19 +73,24 @@
 
 				<p>My true focus has been Historical GIS; I have researched this emerging field deeply, eventually deciding to base my Honors Thesis on it. On the other hand, my true passion is being able to help my community and environment. I believe my education and work experience have prepared me to offer my skills as a GIS Analyst, Researcher/Analyst, and Cartographer in hopes of improving our understanding and relationship with the world around us.</p>-->
 
-				<p>For further description of GIS and how it is currently being applied, these links below were produced by Pennsylvania State University to describe how GIS is utilized to transform and inform the way we interact with the world around us:</p>
+				<!--<p>For further description of GIS and how it is currently being applied, these links below were produced by Pennsylvania State University to describe how GIS is utilized to transform and inform the way we interact with the world around us:</p>
 
 				<p class="bio-link"><span class="bio-span"><a href="https://www.youtube.com/watch?v=GXS0bsR0e7w&index=1&list=PLKezsLnzDdexE0l58ZZzhc4Ev1xA0Tu4K" target="_blank">This video</a></span> discusses how GIS has transformed the way "local governments and business use geospatial technology to deliver services and run efficiently, keeping a continuing eye on future developments and applications"</p>
 
 				<p class="bio-link"><span class="bio-span"><a href="https://www.youtube.com/watch?v=OePOK6nzcaY&list=PLKezsLnzDdexE0l58ZZzhc4Ev1xA0Tu4K&index=2" target="_blank">This video</a></span> discusses how GIS informs "the world of security: how new technologies help to broker peace, wage war, and fight crime but can also compromise personal privacy"</p>
 
-				<p class="bio-link"><span class="bio-span"><a href="https://www.youtube.com/watch?v=9F7z9LLYxf8&list=PLKezsLnzDdexE0l58ZZzhc4Ev1xA0Tu4K&index=3" target="_blank">This video</a></span> discusses how GIS is utilized "around the world: monitoring global climate change, preventing famine, tracking disease and mapping communities never before seen on a map"</p>
+				<p class="bio-link"><span class="bio-span"><a href="https://www.youtube.com/watch?v=9F7z9LLYxf8&list=PLKezsLnzDdexE0l58ZZzhc4Ev1xA0Tu4K&index=3" target="_blank">This video</a></span> discusses how GIS is utilized "around the world: monitoring global climate change, preventing famine, tracking disease and mapping communities never before seen on a map"</p>-->
+
+				<p class="bio-link"><span class="bio-span"><a href="https://www.esri.com/en-us/what-is-gis/overview" target="_blank">This overview of GIS by ESRI</a></span> outlines how GIS is used, how it works, and offers a variety industry specific examples.</p>
+
+				<p class="bio-link"><span class="bio-span">"<a href="https://www.esri.com/en-us/about/national-geographic" target="_blank">Exploring With GIS</a></span>" is a mini-series produced by ESRI in collaboration National Geographic.</p>
+
 		</div>
 
 	</div>
 
 	<a href="#">
-		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : July 22nd, 2022
+		<footer>Click to return to top of page | Last edited by Zachary C. Raslan : April 8th, 2023
 		</footer>
 	</a>
 
